# backup-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
src/backup_assistant/: backup.py  cli.py  config.py  logs.py  main.py
tests/: config.yaml  test_backup.py
tests/data/from/folder_1/subfolder_1_1/: file_1_1_1.txt
